Simplify AmeldingService with efficient data mapping
Refactored the data mapping in AmeldingService.java using a more direct approach instead of collecting to a groupingBy(). This change increases the efficiency of mapping AMeldingDTO objects, making the code more maintainable and readable.